<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen">
<RelativeLayout
    android:id="@+id/rel_lay_homescreen_header"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/img_homescreen_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:src="@drawable/bsicon" />

    <RelativeLayout
        android:id="@+id/rel_lay_homescreen_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_homescreen_icon"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/txt_homescreen_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailid"
            android:textSize="20sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edtxt_homescreen_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_homescreen_email"
            android:background="@drawable/edittxtborder"
            android:hint="@string/emailid"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            >

        </EditText>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_lay_homescreen_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel_lay_homescreen_email"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/txt_homescreen_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edtxt_homescreen_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_homescreen_pass"
            android:hint="@string/password"
            android:background="@drawable/edittxtborder"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            />


    </RelativeLayout>


    <TextView
        android:id="@+id/txt_homescreen_nextbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel_lay_homescreen_pass"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/btncolor"
        android:paddingBottom="15dp"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        android:paddingTop="15dp"
        android:text="@string/NEXT"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/txt_homescreen_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_homescreen_nextbtn"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/Skip"
        android:textSize="15dp" />
</RelativeLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        >

    </FrameLayout>



</RelativeLayout>